cmake_minimum_required( VERSION 2.8 FATAL_ERROR )
project( Test1 )
find_package( PCL 1.3 REQUIRED )
include_directories( ${PCL_INCLUDE_DIRS} . )
link_directories( ${PCL_LIBRARY_DIRS} )
add_definitions( ${PCL_DEFINITIONS} )

set( SRC_GraphSearch GraphSearch/Graph.cpp GraphSearch/Dijkstra.cpp GraphSearch/Vertex.cpp )
set( HDR_GraphSearch GraphSearch/Graph.h GraphSearch/Dijkstra.h GraphSearch/Vertex.h )
set( SRC_PCLTools PCL_Tools/PCL_Tools.cpp )
set( HDR_PCLTools PCL_Tools/PCL_Tools.h )
set( SRC_FILES main.cpp )
set( HDR_FILES  )
add_executable( main ${SRC_FILES} ${HDR_FILES} ${SRC_GraphSearch} ${HDR_GraphSearch} ${SRC_PCLTools} ${HDR_PCLTools} )
target_link_libraries( main ${PCL_LIBRARIES} )
